@@ -22,3 +22,4 @@
 * It is no longer possible to upgrade from across.res to elma.res
 * Readme.txt is no longer autogenerated
 * noretrac.inf (software backbuffer) is no longer supported
+* fordit.inf (invert volt buttons) is no longer supported
